--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:name=".MainApplication">
+		<service android:name=".services.MappingFilesReceiverService"/>
 		<service android:name=".services.SmsReceiverService" />
 		<service android:name=".services.AutoSyncService" />
 		<service android:name=".services.AutoSyncScheduledService" />
