--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	If you have questions regarding the use of this file, please contact Ushahidi 
 	developers at team@ushahidi.com. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.addhen.smssync" android:versionCode="11"
+	package="org.dhis.smssync" android:versionCode="11"
 	android:versionName="0.0.1">
 
 	<uses-permission android:name="android.permission.RECEIVE_SMS" />
