--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.addhen.smssync.test"
+      package="org.dhis.smssync.test"
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="4" />
-    <instrumentation android:targetPackage="org.addhen.smssync" android:name="android.test.InstrumentationTestRunner" />
+    <instrumentation android:targetPackage="org.dhis.smssync" android:name="android.test.InstrumentationTestRunner" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
     <uses-library android:name="android.test.runner" />
